Sun Jan 13 00:36:48 CET 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, common.h: changes how acosf, signbit and lrint are
	checked for to allow to compile with -Werror

Wed Jan  2 15:48:02 CET 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, doc/Makefile.am, lib/Makefile.am, non-src/Makefile.am,
	po/POTFILES.in: fix make distcheck
	* multithread.h: fix typo and add MT_SafeDecCheck

Tue Jan 01 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* relational.c, gtkrelational.c, database.py, gnubg.sql:
		Simplify relational database by removing "environments".

Wed Dec 19 11:06:45 CET 2007 Christian Anthon <anthon@kiku.dk>

	* lib/cache.c: only lock one level

Wed Dec 19 10:32:27 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, util.c, board3d/drawboard3d.c, board3d/misc3d.h,
	lib/cache.c: small changes to previous

Tue Dec 18 21:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* Code changes so -ansi -pedantic (just about) works for gcc on windows.

Tue Dec 18 14:14:10 CET 2007 Christian Anthon <anthon@kiku.dk>

	* set.c, board3d/drawboard3d.c, board3d/fun3d.h, board3d/inc3d.h,
	board3d/matrix.c, board3d/matrix.h, board3d/misc3d.c,
	board3d/misc3d.h, board3d/shadow.c, board3d/widget3d.c: let new
	board3d code compile under linux.

Tue Dec 18 14:10:55 CET 2007 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, makebearoff.c, makehyper.c, record.c: make utily
	programs compile with threads enabled

Mon Dec 17 16:33:01 CET 2007 Christian Anthon <anthon@kiku.dk>

	* lib/cache.c: Fix multithreaded hang when runing quad core with four
	threads. WaitForManualEvent appears to be broken, at least on glib
	threads

Mon Dec 17 15:06:44 CET 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, dice.c, dice.h, eval.c, format.c, gnubg.c, gtkgame.c,
	gtkgame.h: move things around a bit so that utility programs compile
	without ugly fixes (only without threads for now)

Mon Dec 17 15:04:42 CET 2007 Christian Anthon <anthon@kiku.dk>
